Series: create, store, edit, update, destroy, index, validation.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1990,6 +1990,9 @@ select {
 .font-normal {
 	font-weight: 400;
 }
+.font-extrabold {
+	font-weight: 800;
+}
 .uppercase {
 	text-transform: uppercase;
 }
