--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1281,6 +1281,9 @@ select {
 .mb-5 {
 	margin-bottom: 1.25rem;
 }
+.-mt-52 {
+	margin-top: -13rem;
+}
 .block {
 	display: block;
 }
@@ -1781,14 +1784,28 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
+.bg-indigo-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
+}
+.bg-green-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
 .bg-cover {
 	background-size: cover;
 }
+.bg-fixed {
+	background-attachment: fixed;
+}
 .bg-center {
 	background-position: center;
+}
+.bg-bottom {
+	background-position: bottom;
 }
 .bg-no-repeat {
 	background-repeat: no-repeat;
@@ -1978,6 +1995,10 @@ select {
 	font-size: 1.875rem;
 	line-height: 2.25rem;
 }
+.text-9xl {
+	font-size: 8rem;
+	line-height: 1;
+}
 .font-medium {
 	font-weight: 500;
 }
@@ -2106,6 +2127,14 @@ select {
 .text-red-800 {
 	--tw-text-opacity: 1;
 	color: rgba(153, 27, 27, var(--tw-text-opacity));
+}
+.text-gray-50 {
+	--tw-text-opacity: 1;
+	color: rgba(249, 250, 251, var(--tw-text-opacity));
+}
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
