--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2787,6 +2787,11 @@ select {
 		grid-column: span 4 / span 4;
 	}
 
+	.md\:my-0 {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
 	.md\:mt-0 {
 		margin-top: 0px;
 	}
